[metadata]
name = counsyl-django-ledger
author = Hunter Richards
author-email = hunter@counsyl.com
summary = Django app representing a double-entry accounting ledger.
description-file = README.md
home-page = https://github.counsyl.com/dev/counsyl-django-ledger
license = Copyright Counsyl, Inc.
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Intended Audience :: Legal Industry
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Topic :: Office/Business :: Financial :: Accounting
[files]
packages =
    ledger
[pbr]
skip_authors = true
skip_changelog = true
[global]
test_suite = runtests.runtests
[bdist_wheel]
universal = 1
