[metadata]
name = capone
author = Hunter Richards
author_email = opensource@counsyl.com
summary = Django app representing a double-entry accounting ledger.
description_file = README.rst
home_page = https://github.com/counsyl/capone
license = Copyright Counsyl, Inc.
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Intended Audience :: Legal Industry
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Office/Business :: Financial :: Accounting
[files]
packages = capone
[pbr]
skip_authors = true
skip_changelog = true
[bdist_wheel]
universal = 1
