[metadata]
name = capone
author = Hunter Richards
author_email = opensource@counsyl.com
description = Django app representing a double-entry accounting ledger.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/counsyl/capone
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Intended Audience :: Legal Industry
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Accounting

[pbr]
skip_authors = true
skip_changelog = true

[options]
packages = find:

[bdist_wheel]
universal = 1
